# GameEngineCoding

./: .gitignore  Brush.cpp  Brush.h  CMakeLists.txt  EngineManager.cpp  EngineManager.h  GameEngine.code-workspace  GameObject.cpp  GameObject.h  Inspector.h  README.md  SaveLoadBuild.h  imgui.ini  main.cpp
BuildCode/: Brush.cpp  Brush.h  CMakeLists.txt  EngineManager.cpp  EngineManager.h  GameObject.cpp  GameObject.h  Inspector.h  SaveLoadBuild.h  main.cpp
BuildCode/UpdateFunctions/: CoreFunctions.h  UpdateDictionary.h
BuildCode/UpdateFunctions/Default/: DestroyOnTouch.txt  PlatformerMovement.txt  Test.txt
BuildCode/include/SDL3/: SDL_assert.h
UpdateFunctions/: CoreFunctions.h  Default.cpp  Default.h  KeyData.h  ScriptConverter.h  UpdateDictionary.h
UpdateFunctions/Default/: Test.txt  TopDownMovement.txt  TouchToLose.txt  TouchToWin.txt
docs/: HowToUse.html  UpdateAPI.html  WritingScripts.html  index.html
imgui/: imgui_impl_sdl3.cpp
include/SDL3/: SDL_atomic.h
lib/: SDL3_image.lib  SDL3_test.lib  box2d.lib
